kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: simple-web
spec:
  selector:
    app: web-app
  ports:
    - port: 80
      targetPort: 8000
